fixed responsive images from overflowing table

--- a/Assignment_1/homework1_bootstrap.css
+++ b/Assignment_1/homework1_bootstrap.css
@@ -10,6 +10,10 @@ body {
     box-shadow: 5px 5px 10px #C9C9C9; 
 }
 
+.img-responsive {
+    width: 100%;
+}
+
 p {
     text-align: justify;
 }
